---
source: tests/integration.rs
assertion_line: 397
expression: pgm016
---
- rule_id: PGM016
  severity: Critical
  message: "SET NOT NULL on column 'customer_id' of existing table 'customers' requires an ACCESS EXCLUSIVE lock and full table scan. Use a CHECK constraint with NOT VALID, validate it, then set NOT NULL."
  file: repos/all-rules/migrations/V005__new_violations.sql
  start_line: 1
  end_line: 2
